--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "@emailjs/browser": "^4.3.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.3"
+    "react-router-dom": "^6.22.3",
+    "react-simple-typewriter": "^5.0.1",
+    "react-text-gradients-and-animations": "^1.1.7",
+    "react-text-writer": "^3.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
